Testando o Controle de Versão Git e publicando o site na Nuvem com GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<section>
 			<div>
 				<span>
-					<h1 title="Associação Palavra de Vida">SITE ASSOCIAÇÃO PALAVRA DE VIDA</h1>
+					<h1 title="Associação Palavra de Vida">SITE ASSOCIAÇÃO PALAVRA DE VIDA - WEB</h1>
  					
  					<h2 class="h2VenhaSerMantenedor"> <em> <strong> Venha ser um Mantenedor deste Projeto ! </strong> </em> </h2>
  					<a href="#" class="btnSejaSocio-Mantenedor">Clique aqui para ser sócio-mantenedor!</a>
