HTML - Alterada informaçaçõçacoes da pááagina inicial

--- a/only-html-css/Assets/site_todo_conteudo/index.html
+++ b/only-html-css/Assets/site_todo_conteudo/index.html
@@ -269,6 +269,6 @@
 		<script>
 		window.rwbp={email:'pr.volni@hotmail.com',phone:'+55 49 988477611',message:'Olá, fale conosco pelo What's App para saber mais informações!',lang:'pt-BR'}   </script>
 
-		<script defer async src='https://duz4dqsaqembt.cloudfront.net/client/whats.js'></script>
+		<script defer src='https://duz4dqsaqembt.cloudfront.net/client/whats.js'></script>
 </body>
 </html>
