PHP - Reciclando arquivos não utilizados

--- a/only-html-css/Assets/site_todo_conteudo/index.html
+++ b/only-html-css/Assets/site_todo_conteudo/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<header>
+	<!-- <header>
 		<nav class="NavHeader">
 			<ol>
 				<li>
@@ -38,7 +38,7 @@
 				</li>
 			</ol>
 		</nav>
-	</header>
+	</header> -->
 	
 	<main>
 		<section>
